<resources>

    <string name="app_name">Counter</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_tow">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>

</resources>