<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_count"
            style="@style/CodeFont"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="请输入计算表达式"
            android:paddingTop="10dp" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:hint="计算的结果是。。。"
            android:textSize="20sp" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >

        <TableRow>

            <Button
                android:id="@+id/bt00"
                android:layout_height="wrap_content"
                android:onClick="doOnClicks"
                android:text="@string/number_zero"
                android:textColor="@color/buttom_color" />

            <Button
                android:id="@+id/bt01"
                android:layout_height="wrap_content"
                android:onClick="doOnClicks"
                android:text="@string/number_one" />

            <Button
                android:id="@+id/bt02"
                android:layout_height="wrap_content"
                android:onClick="doOnClicks"
                android:text="@string/number_tow" />

            <Button
                android:id="@+id/bt03"
                android:layout_height="wrap_content"
                android:onClick="doOnClicks"
                android:text="@string/number_three" />

            <Button
                android:id="@+id/bt04"
                android:layout_height="wrap_content"
                android:onClick="doOnClicks"
                android:text="@string/number_four" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/bt05"
                android:layout_height="wrap_content"
                android:onClick="doOnClicks"
                android:text="@string/number_five" />

            <Button
                android:id="@+id/bt06"
                android:layout_height="wrap_content"
                android:onClick="doOnClicks"
                android:text="@string/number_six" />

            <Button
                android:id="@+id/bt07"
                android:layout_height="wrap_content"
                android:onClick="doOnClicks"
                android:text="@string/number_seven" />

            <Button
                android:id="@+id/bt08"
                android:layout_height="wrap_content"
                android:onClick="doOnClicks"
                android:text="@string/number_eight" />

            <Button
                android:id="@+id/bt09"
                android:layout_height="wrap_content"
                android:onClick="doOnClicks"
                android:text="@string/number_nine" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/add_bt"
                android:layout_height="wrap_content"
                android:onClick="doOnClicks"
                android:text="+" />

            <Button
                android:id="@+id/sub_bt"
                android:layout_height="wrap_content"
                android:onClick="doOnClicks"
                android:text="-" />

            <Button
                android:id="@+id/mul_bt"
                android:layout_height="wrap_content"
                android:onClick="doOnClicks"
                android:text="x" />

            <Button
                android:id="@+id/div_bt"
                android:layout_height="wrap_content"
                android:onClick="doOnClicks"
                android:text="/" />

            <Button
                android:id="@+id/bt14"
                android:layout_height="wrap_content"
                android:onClick="doOnClicks"
                android:text="." />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/back_bt"
                android:layout_height="wrap_content"
                android:onClick="doOnClicks"
                android:text="back" />

            <Button
                android:id="@+id/clear_bt"
                android:layout_height="wrap_content"
                android:onClick="doOnClicks"
                android:text="clear" />

            <Button
                android:id="@+id/bt17"
                android:layout_height="wrap_content"
                android:onClick="doOnClicks"
                android:text="^" />

            <Button
                android:id="@+id/bt18"
                android:layout_height="wrap_content"
                android:onClick="doOnClicks"
                android:text="(" />

            <Button
                android:id="@+id/bt19"
                android:layout_height="wrap_content"
                android:onClick="doOnClicks"
                android:text=")" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/bt20"
                android:layout_height="wrap_content"
                android:layout_span="5"
                android:onClick="doOnClicks"
                android:text="=" />
        </TableRow>
    </TableLayout>

</LinearLayout>